try to fix extraneous scrollbars on firefox
git-svn-id: http://svn.dojotoolkit.org/src@2792 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/trunk/src/widget/templates/HtmlSplitPane.css
+++ b/trunk/src/widget/templates/HtmlSplitPane.css
@@ -1,6 +1,10 @@
+.dojoHtmlSplitPane{
+	position: relative;
+	overflow: hidden;
+}
+
 .dojoHtmlSplitterPanePanel{
 	position: absolute;
-	overflow: hidden;
 	background-color: ThreeDFace;
 	padding: 5px;
 	margin: 0;
